<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_channel_id">filedl</string>
    <string name="notification_channel_name">File download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="check_the_status">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="radio_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_loadapp">LoadApp - Current repository by Udacity</string>
    <string name="radio_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="toast_no_select">Please select the file to download</string>
    <string name="download">Download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>

    <string name="status_failed">Failed</string>
    <string name="status_success">Success</string>
    <string name="ok">OK</string>
    <string name="download_status">Download status</string>
</resources>
